--- a/src/components/Icons/FacilitiesIcons/FacilitiesIcons.css
+++ b/src/components/Icons/FacilitiesIcons/FacilitiesIcons.css
@@ -52,27 +52,27 @@
 }
 
 .facilities__clue {
-    display: none;
+  display: none;
 
-    min-width: 84px;
+  min-width: 84px;
 
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 18px;
-    text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: center;
 
-    border-radius: 5px;
-    background-color: #F5F4F6;
+  border-radius: 5px;
+  background-color: #f5f4f6;
 
-    box-shadow: 0px 4px 4px 0px #00000040;
+  box-shadow: 0px 4px 4px 0px #00000040;
 
-    position: absolute;
-    top: 37px;
-    z-index: 2;
+  position: absolute;
+  top: 37px;
+  z-index: 2;
 
-    padding: 8px;
+  padding: 8px;
 }
 
 .facilities__wrapper:hover .facilities__clue {
-    display: block;
+  display: block;
 }
