--- a/src/components/LastTicketsList/LastTicketsList.css
+++ b/src/components/LastTicketsList/LastTicketsList.css
@@ -1,4 +1,4 @@
-.last-ticket__tittle {
+.last-tickets__tittle {
   font-size: 30px;
   font-weight: 500;
   line-height: 35px;
@@ -7,31 +7,22 @@
   margin-bottom: 26px;
 }
 
-.last-ticket__item {
-  width: 360px;
-  height: 161px;
-
+.last-tickets__item {
   border: 1px solid #c4c4c4;
+  margin-top: 17px;
+}
 
+.last-ticket {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 
   padding: 18px;
-  margin-top: 17px;
 }
 
-.last-ticket__cities-box {
+.city-details__box {
   display: flex;
   justify-content: space-between;
-}
-
-.city-details_left {
-  text-align: left;
-}
-
-.city-details_right {
-  text-align: right;
 }
 
 .city-details__tittle {
@@ -53,6 +44,8 @@
 .last-ticket__content {
   display: flex;
   justify-content: space-between;
+
+  margin-top: 22px;
 }
 
 .last-ticket__facilities {
@@ -77,7 +70,7 @@
   align-items: baseline;
 }
 
-.cost__text {
+.last-ticket__cost-text {
   font-size: 16px;
   font-weight: 400;
 
