--- a/src/components/SearchTrainForm/SearchTrainForm.css
+++ b/src/components/SearchTrainForm/SearchTrainForm.css
@@ -13,12 +13,12 @@
   color: #ffffff;
 }
 .search-train_horizontal .search-train__containers-wrapper {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .search-train_vertical .search-train__container:nth-child(n + 2) {
-    margin-top: 61px;
+  margin-top: 61px;
 }
 
 .search-train_title {
@@ -35,7 +35,7 @@
   margin: 0 auto;
 }
 
-.search-train__btn_switch {
+.search-train__btn-switch {
   width: 24px;
   height: 24px;
 
@@ -43,9 +43,11 @@
 
   background-image: url(../../assets/images/icon_switch.svg);
   background-color: transparent;
+
+  cursor: pointer;
 }
 
-.search-train__btn_switch:active {
+.search-train__btn-switch:active {
   transform: rotate(90deg);
 }
 
@@ -65,6 +67,8 @@
   border-radius: 5px;
 
   background-color: #ffa800;
+
+  cursor: pointer;
 }
 
 .search-train__button:hover {
@@ -81,9 +85,9 @@
 }
 
 .search-train_vertical .search-train__button {
-    margin-top: 92px;
+  margin-top: 92px;
 }
 
 .search-train_horizontal .search-train__button {
-    margin-top: 47px;
+  margin-top: 47px;
 }
