--- a/src/components/FilterTrainsFound/FilterTrainsFound.css
+++ b/src/components/FilterTrainsFound/FilterTrainsFound.css
@@ -4,15 +4,17 @@
   cursor: pointer;
 }
 
-.filters__list {
-  width: 139px;
-  text-align: left;
-
-  background-color: #f7f5f9;
-
+.filters__list-wrapper {
   position: absolute;
   top: 0;
   right: 0;
+
+  animation: popover 0.3s linear;
+}
+
+.filters__list {
+  width: 139px;
+  text-align: left;
 
   box-shadow: 0px 4px 4px 0px #00000040;
 }
@@ -26,6 +28,8 @@
 
 .filters__item {
   height: 40px;
+
+  background-color: #f7f5f9;
 
   padding: 9px 0 9px 5px;
 
